add_executable(datastruct_lru datastruct_lru.cc)
add_executable(greedy_cookies greedy_cookies.cc)
add_executable(greedy_candies greedy_candies.cc)
add_executable(greedy_flowers greedy_flowers.cc)
add_executable(greedy_min_arrows greedy_min_arrows.cc)
add_executable(greedy_internal_overlap greedy_internal_overlap.cc)