add_executable(greedy_cookies greedy_cookies.cc)
add_executable(greedy_candies greedy_candies.cc)
add_executable(greedy_flowers greedy_flowers.cc)
add_executable(greedy_min_arrows greedy_min_arrows.cc)
add_executable(greedy_internal_overlap greedy_internal_overlap.cc)
add_executable(greedy_partition_labels greedy_partition_labels.cc)
add_executable(greedy_max_profit greedy_max_profit.cc)
add_executable(greedy_reconstruct_queue greedy_reconstruct_queue.cc)
add_executable(greedy_non_decrease greedy_non_decrease.cc)